@@ -884,7 +884,7 @@ void Prm::vlArchMake( TVal &val )
 
     if(val.arch().freeStat()) return;
     val.arch().at().setSrcMode(TVArchive::ActiveAttr);
-    val.arch().at().setPeriod(owner().period() ? owner().period()/1000 : 1000000);
+    val.arch().at().setPeriod(SYS->archive().at().valPeriod()*1000);
     val.arch().at().setHardGrid(true);
     val.arch().at().setHighResTm(true);
 }
